Fix issue with bold text appearing in wrong color when inside code block

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -93,6 +93,10 @@
       a {
         @apply !text-white;
       }
+
+      strong {
+        @apply !text-white;
+      }
     }
 
     h1 {
